--- a/.github/workflows/myactions.yml
+++ b/.github/workflows/myactions.yml
@@ -32,7 +32,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          wget "https://raw.githubusercontent.com/kedarnathdev/rclone/main/rclone.conf" --no-check-certificate -O ".rclone.conf"
+          echo "${{ secrets.RCLONE }}" > ".rclone.conf"
           mv .rclone.conf /home/runner
           curl https://rclone.org/install.sh | sudo bash
           rclone config file
@@ -41,4 +41,4 @@ jobs:
           chmod 755 ~/downloadss/
           cd ~/downloadss
           wget "${{ secrets.LINK }}" --no-check-certificate -O "${{ secrets.NAME }}"
-          rclone -v copy ~/downloadss drive:Tollywood
+          rclone -v copy ~/downloadss drive:testing
