--- a/.github/workflows/myactions.yml
+++ b/.github/workflows/myactions.yml
@@ -32,7 +32,7 @@ jobs:
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
-          wget "https://raw.githubusercontent.com/kedarnathdev/rclone/main/rclone.conf" -O ".rclone.conf"
+          wget "{{ secrets.RCLONE }}" -O ".rclone.conf"
           mv .rclone.conf /home/runner
           curl https://rclone.org/install.sh | sudo bash
           rclone config file
